header and description blocks complete

--- a/index.html
+++ b/index.html
@@ -4,14 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
+    <div class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="logo">
+    </div>
     <header class="header">
-
+      <div class="header__title">
+        <h1 class="header__title-text">Научиться учиться</h1>
+      </div>
+      <div class="header__subtitle">
+        <p class="header__subtitle-text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+          <a class="header__link" href="#" lang="ru">Узнать &rarr;</a>
+        </p>
+      </div>
+      <div class="header__main-illustration">
+        <img src="./images/header-image.png" alt="sad boy" class="header__main-illustration-picture">
+      </div>
+      <div class="header__square-pic">
+      </div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <p class="two-columns__brief-text">Главные проблемы в обучении</p>
+          </div>
+          <div class="two-columns__main-text">
+            <ul class="two-columns__paragraph">
+              <li class="two-columns__paragraph_indent">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+                Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              </li>
+              <li class="two-columns__paragraph_indent">
+                <span class="two-column__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              </li>
+              <li>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+                Эти же техники применяются на примере обучения в Практикуме.
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
