--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
       <img src="./images/logo_place_header.svg" alt="logo">
     </div>
     <header class="header">
-      <div class="header__title">
-        <h1 class="header__title-text">Научиться учиться</h1>
-      </div>
-      <div class="header__subtitle">
-        <p class="header__subtitle-text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a class="header__link" href="#" lang="ru">Узнать &rarr;</a>
-        </p>
-      </div>
-      <div class="header__main-illustration">
-        <img src="./images/header-image.png" alt="sad boy" class="header__main-illustration-picture">
-      </div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <a class="header__link" href="#" lang="ru">Узнать &rarr;</a>
+      </p>
+      <img src="./images/header-image.png" alt="sad boy" class="header__main-illustration">
       <div class="header__square-pic">
       </div>
     </header>
@@ -50,6 +44,44 @@
         </div>
       </section>
       <section class="digits">
+        <h2 class=" section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <div class="table">
+          <div class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_end">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_end">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feinman">
