--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <div class="page">
-    <div class="logo logo_place_header">
-      <img src="./images/logo_place_header.svg" alt="logo">
-    </div>
+      <img src="./images/logo_place_header.svg" alt="logo_header" class="logo logo_place_header">
 
     <header class="header">
       <h1 class="header__title">Научиться учиться</h1>
@@ -25,22 +23,18 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">
-            <p class="two-columns__brief-text">Главные проблемы в обучении</p>
-          </div>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
-            <ul class="two-columns__paragraph">
-              <li class="two-columns__paragraph_indent">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
                 Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
                 но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-              </li>
-              <li class="two-columns__paragraph_indent">
+            </p>
+            <p class="two-columns__paragraph">
                 <span class="two-column__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-              </li>
-              <li>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
                 Эти же техники применяются на примере обучения в Практикуме.
-              </li>
-            </ul>
+            </p>
           </div>
         </div>
       </section>
@@ -142,7 +136,24 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="logo_footer" class="logo logo_place_footer">
+          <p class="footer__author">&copy; 2020. Aleksei Tsybin</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
+          <a href="#" lang="ru" class="footer__column-links">Главная</a>
+          <a href="#" lang="ru" class="footer__column-links">Концепция</a>
+          <a href="#" lang="ru" class="footer__column-links">Наставники</a>
+        </div>
+        <div class="footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <a href="#" lang="en" class="footer__column-links"><img src="./images/facebook_color_white.svg" alt="facebook"> Facebook</a>
+          <a href="#" lang="ru" class="footer__column-links"><img src="./images/vk_color_white.svg" alt="vk"> ВКонтакте</a>
+          <a href="#" lang="en" class="footer__column-links"><img src="./images/instagram_color_white.svg" alt="instagram"> Instagram</a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
