--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
