--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="page">
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="logo_header" class="logo logo_place_header">
-      <h1 class="header__title">Научиться учитьсheuя</h1>
+      <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a class="header__link" href="#" lang="ru">Узнать &rarr;</a>
       </p>
