--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./images/logo_place_header.svg" alt="logo_header" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a class="header__link" href="#" lang="ru">Узнать &rarr;</a>
+      <a class="header__link transparence" href="#" lang="ru">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="sad boy" class="header__main-illustration">
       <div class="header__square-pic">
@@ -81,7 +81,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#" lang="ru">Подробнее &rarr;</a>
+        <a class="feynman__link transparence" href="#" lang="ru">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="feynman" class="feynman__image">
       </section>
 
@@ -142,21 +142,21 @@
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О практикуме</h3>
           <ul class="footer__column-links">
-            <li><a href="#" lang="ru" class="footer__column-link">Главная</a></li>
-            <li><a href="#" lang="ru" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" lang="ru" class="footer__column-link">Наставники</a></li>
+            <li><a href="#" lang="ru" class="footer__column-link transparence">Главная</a></li>
+            <li><a href="#" lang="ru" class="footer__column-link transparence">Концепция</a></li>
+            <li><a href="#" lang="ru" class="footer__column-link transparence">Наставники</a></li>
         </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a href="#" lang="en" class="footer__column-link">
+            <li><a href="#" lang="en" class="footer__column-link transparence">
                 <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="facebook"> Facebook</a>
             </li>
-            <li><a href="#" lang="ru" class="footer__column-link">
+            <li><a href="#" lang="ru" class="footer__column-link transparence">
                <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk"> ВКонтакте</a>
             </li>
-            <li><a href="#" lang="en" class="footer__column-link">
+            <li><a href="#" lang="en" class="footer__column-link transparence">
                <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="instagram"> Instagram</a>
             </li>
         </ul>
