--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a class="header__link transparence" href="#" lang="ru">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="sad boy" class="header__main-illustration">
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
     </header>
     <main class="content">
