--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
         </div>
       </section>
 
+      <section class="oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+        </div>
+      </section>
+
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
@@ -126,6 +137,24 @@
         </div>
       </section>
 
+      <section class='khan'>
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h3 class="khan__title">Весь мир - школа</h3>
+          <blockquote class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+            кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежжисер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="khan-book-picture" class="khan__book-pic">
+            <a class="khan__buy-link transparence" href="#" lang="ru">Купить книгу &rarr;</a>
+          </div>
+        </div>
+
+      </section>
+
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -172,6 +201,17 @@
           </div>
         </div>
         <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img src="./images/resources-arzamas.svg" alt="arzamas" class="resources__logo">
+          <img src="./images/resources-n1.svg" alt="n1" class="resources__logo">
+          <img src="./images/resources-strelka.svg" alt="strelka" class="resources__logo">
+          <img src="./images/resources-polka.svg" alt="polka" class="resources__logo">
+        </div>
       </section>
     </main>
     <footer class="footer">
